src/objects/aok_Household__c.object
<CustomObject>
    <fields>
        <fullName>Current_Household_Name__c</fullName>
        <formula>Current_Household__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current_Household_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intake</label>
        <referenceTo>Intake__c</referenceTo>
        <relationshipLabel>Household</relationshipLabel>
        <relationshipName>Households</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Household</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Household Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Household</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>